# jpegcam

./: AGENTS.md  README.md  build.gradle
.github/workflows/: build.yml
Advanced-Grain-Experimental--fix-dpad-hud/: build.gradle
Advanced-Grain-Experimental--fix-dpad-hud/app/src/main/cpp/: native-lib.cpp  process_kernel.h
Advanced-Grain-Experimental--fix-dpad-hud/app/src/main/java/com/github/ma1co/pmcademo/app/: ImageProcessor.java  InputManager.java  LensProfileManager.java  LutEngine.java  MainActivity.java  MatrixManager.java  MenuController.java  PlaybackController.java  RTLProfile.java  RecipeManager.java
Advanced-Grain-Experimental--fix-dpad-hud/experimental/standalone-grain-model/: README.md  film_grain_preview.cs  render_test_outputs.ps1
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  process_kernel.h  thread_pool.h
app/src/main/java/com/github/ma1co/pmcademo/app/: AdvancedFocusMeterView.java  CameraUtil.java  ConnectivityManager.java  DiptychFraming.java  DiptychManager.java  DiptychOverlayView.java  Filepaths.java  HttpServer.java  HudController.java  ImageProcessor.java  InputManager.java  LensMath.java  LensProfileManager.java  LutCooker.java  LutEngine.java  MainActivity.java  MenuController.java  PlaybackController.java  RTLProfile.java  RecipeManager.java  SonyCameraManager.java  SonyFileScanner.java
app/src/main/res/drawable/: hud_box.xml
app/src/main/res/layout/: activity_main.xml
